--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     },
     "require": {
         "php": "^8.3",
-        "statamic/cms": "^5.0"
+        "statamic/cms": "^5.0",
+        "laravel/framework": "^11 || ^12"
     },
     "require-dev": {
         "spatie/laravel-ray": "^1.40"
