--- a/composer.json
+++ b/composer.json
@@ -49,5 +49,8 @@
             "pixelfear/composer-dist-plugin": true,
             "pestphp/pest-plugin": true
         }
+    },
+    "scripts": {
+        "test": "./vendor/bin/pest --ci --parallel"
     }
 }
